conf/surfdash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surfdash
  labels:
    app: surfdash
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: surfdash
  template:
    metadata:
      labels:
        app: surfdash
    spec:
      containers:
      - name: surfdash
        image: ko://github.com/spencer-p/surfdash
        ports:
        - containerPort: 8080
