conf/surfdash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surfdash
spec:
  selector:
    app: surfdash
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
