conf/surfdash-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: surfdash
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /surfdash/
        pathType: Prefix
        backend:
          serviceName: surfdash
          servicePort: 8080
