conf/surfdash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surfdash
  labels:
    app: surfdash
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: surfdash
  template:
    metadata:
      labels:
        app: surfdash
    spec:
      containers:
      - name: surfdash
        image: ko://github.com/spencer-p/surfdash
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: "/"
            port: 8080
          periodSeconds: 21600  # 60 * 60 * 6 = 6 hours
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: surfdash
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
  - host: icebox.spencerjp.dev
    http:
      paths:
      - path: /surfdash/
        pathType: Prefix
        backend:
          service:
            name: surfdash
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: surfdash
  labels:
    app: surfdash
spec:
  selector:
    app: surfdash
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
    - protocol: TCP
      name: metrics
      port: 8081
      targetPort: 8081
